--- a/Servlet/WebContent/index.html
+++ b/Servlet/WebContent/index.html
@@ -9,5 +9,9 @@
 
   <body>
     nothing much...
+
+    <p>
+        Perhaps you'd like to check out <a href="Students">Students</a>, <a href="Exams">Exams</a> or <a href="Challanges">Challanges</a>
+    </p>
   </body>
 </html>
