Student login / register / logout.

--- a/Servlet/WebContent/index.html
+++ b/Servlet/WebContent/index.html
@@ -13,7 +13,7 @@
     </p>
 
     <p>
-      Perhaps you'd like to check out <a href="Students">Students</a>, <a href="Exams">Exams</a> or <a href="Challanges">Challanges</a>
+      Perhaps you'd like to check out <a href="students">Students</a>, <a href="exams">Exams</a> or <a href="challenges">challenges</a>.
     </p>
   </body>
 </html>
