added main.css file and including it in index.html

--- a/Servlet/WebContent/index.html
+++ b/Servlet/WebContent/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
 
     <title>TentaKiller</title>
+
+    <link rel="stylesheet" type="text/css" href="css/main.css"></link>
   </head>
 
   <body>
