nicer index page (with images).

--- a/Servlet/WebContent/index.html
+++ b/Servlet/WebContent/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="UTF-8">
@@ -10,12 +9,26 @@
   </head>
 
   <body>
-    <p>
-      nothing much...
-    </p>
+    <menu>
+      <a href="challanges">
+        <img class="challanges" src="img/puzzleIcon.png" alt="A puzzle peice - a challange" title="A puzzle peice - a challange" />
+        <br/>
+        Challanges
+      </a>
 
-    <p>
-      Perhaps you'd like to check out <a href="students">Students</a>, <a href="exams">Exams</a> or <a href="challenges">challenges</a>.
-    </p>
+      <a href="exams">
+        <img class="exams" src="img/penIcon.png" alt="A pen to symbolize an exam" title="View exams page" />
+        <br/>
+        Exams
+      </a>
+
+      <a href="students">
+        <img class="students" src="img/studentIcon.png" alt="A student with a student hat" title="A student with a student hat" />
+        <br/>
+        Students
+        </a>
+    </menu>
+
+    <img class="logo" src="img/TentaKiller.png" alt="TentaKiller logo" title="TentaKiller logo" />
   </body>
 </html>
