student id fix (is String, not long). students list. bar.jsp to include nav and user info. fix student-info page.

--- a/Servlet/WebContent/index.html
+++ b/Servlet/WebContent/index.html
@@ -10,10 +10,10 @@
 
   <body>
     <menu>
-      <a href="challanges">
-        <img class="challanges" src="img/puzzleIcon.png" alt="A puzzle peice - a challange" title="A puzzle peice - a challange" />
+      <a href="challenges">
+        <img class="challenges" src="img/puzzleIcon.png" alt="A puzzle peice - a challenge" title="A puzzle peice - a challenge" />
         <br/>
-        Challanges
+        Challenges
       </a>
 
       <a href="exams">
