give index.html its own index.css file.

--- a/Servlet/WebContent/index.html
+++ b/Servlet/WebContent/index.html
@@ -5,28 +5,28 @@
 
     <title>TentaKiller</title>
 
-    <link rel="stylesheet" type="text/css" href="css/main.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/index.css"></link>
   </head>
 
   <body>
     <menu>
       <a href="challenges">
         <img class="challenges" src="img/puzzleIcon.png" alt="A puzzle peice - a challenge" title="A puzzle peice - a challenge" />
-        <br/>
-        Challenges
+
+        <span class="label">Challenges</span>
       </a>
 
       <a href="exams">
         <img class="exams" src="img/penIcon.png" alt="A pen to symbolize an exam" title="View exams page" />
-        <br/>
-        Exams
+
+        <span class="label">Exams</span>
       </a>
 
       <a href="students">
         <img class="students" src="img/studentIcon.png" alt="A student with a student hat" title="A student with a student hat" />
-        <br/>
-        Students
-        </a>
+
+        <span class="label">Students</span>
+      </a>
     </menu>
 
     <img class="logo" src="img/TentaKiller.png" alt="TentaKiller logo" title="TentaKiller logo" />
